--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
     notesArray.forEach(note => {
         let listItem = document.createElement('li')
         listItem.innerHTML = note
-        orderedLisst.appendChild(listItem)
+        orderedList.appendChild(listItem)
     })
 })()
 
